@@ -66,6 +66,6 @@
 	- rename Module Config and Recheck Config
 
  - admin messages module FS#3235
-	- do as plugin, linked from system settings
 	- thejax theme too
+	- release when 3.47 is
 
