@@ -1,2 +1,6 @@
-<header>Default limit on number of sub-servers</header>
- If the domain owner has sub-server creation privileges, you may limit the number of sub-servers that can be created here.
+<header>Default limit on number of virtual servers</header>
+
+If the domain owner has sub-server creation privileges, you may limit the number of sub-servers that can be created here.<p>
+
+<footer>
+
