@@ -2156,11 +2156,13 @@ tmpl_aliaslimit=Default limit on number of aliases
 tmpl_atmost=At most
 tmpl_dbslimit=Default limit on number of databases
 tmpl_domslimit=Default limit on number of virtual servers
+tmpl_aliasdomslimit=Default limit on number of alias servers
 tmpl_bwlimit=Default bandwidth limit
 tmpl_emailboxlimit=Missing or invalid default limit on number of mailboxes
 tmpl_ealiaslimit=Missing or invalid default limit on number of aliases
 tmpl_edbslimit=Missing or invalid default limit on number of databases
-tmpl_edomslimit=Missing or invalid default limit on number of domains
+tmpl_edomslimit=Missing or invalid default limit on number of virtual servers
+tmpl_ealiasdomslimit=Missing or invalid default limit on number of alias servers
 tmpl_ebwlimit=Missing or invalid default limit on bandwidth
 tmpl_mysql_mkdb=Create database as well as login?
 tmpl_webalizer=Template Webalizer configuration
