@@ -730,3 +730,5 @@ Removed the ability to select the SpamAssassin client program and ClamAV virus f
 Added the set-spam.pl command-line program, which modifies the spam and virus scanners for all virtual servers at once.
 Expanded the plugin API to allow plugins to add their own links to the System Settings menus.
 Moved the buttons for disabling and enabling multiple virtual servers off the Update Virtual Servers page to the domains list where they are more visible, and added confirmation pages.
+Plugin modules can now define additional sections to appear on the right-hand side of the framed theme, and new global options to appear in the System Settings categories on the left.
+The default number of alias servers that new virtual server owners can create can now be set on the Server Templates page.
